testdata/typechecker/error/Minus.java
int main() {
            boolean b;
            b = - 1; // TE
		return 0;
}

